# NativeGLES

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/mouselee/nativegles/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ConfigChooser.cpp  ConfigChooser.h  Constant.h  EglHelper.cpp  EglHelper.h  GLThread.cpp  GLThread.h  LogUtil.h  native-lib.cpp
app/src/main/java/com/mouselee/nativegles/: JniHelper.java  MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mouselee/nativegles/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
